tests/invalid/visibility_internal/internal_keyword_outside_prototype.pts
internal function helper() : void {
}

function main() : void {}
